--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Ben Limmer",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "jest": "^29.2.1",
-    "jest-chain": "^1.1.6",
+    "jest-chain": "1.1.5",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   }
